@startuml
class Employee {
  int Id
  String Name
  String Age
}

class Contract {
  int Id
  DateTime StartDate
  DateTime EndDate
  Bool Active
}

class Secret {
  int Id
  String Secret
  bool IsKnown
}

class Pet {
  int Id
  String Name
  int Age
  bool Favorite
}

Employee ||-|| Contract : Active Contract
Employee ||--|| Secret : Dark Secret
Employee ||--|{ Pet : Pets
@enduml